--- a/.env.example
+++ b/.env.example
@@ -65,4 +65,11 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # OpenAI Configuration
+# Get your key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Optional: Use OpenRouter instead of OpenAI
+# Uncomment and set these values to use OpenRouter (supports multiple LLMs)
+# OPENAI_API_KEY=sk-or-v1-your_openrouter_key
+# OPENAI_API_BASE=https://openrouter.ai/api/v1
+# Get OpenRouter key from: https://openrouter.ai/keys
