--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "openai-php/client": "^0.17.1",
+        "openai-php/laravel": "^0.17.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
